fix(Checkbox): fix checkbox dark mode color

--- a/packages/themes/src/morpheme/_checkbox.dark.scss
+++ b/packages/themes/src/morpheme/_checkbox.dark.scss
@@ -7,8 +7,5 @@
     // disabled
     --v-checkbox-disabled-bg-color: var(--color-gray-true-400);
     --v-checkbox-disabled-border-color: var(--color-gray-true-400);
-
-    // hint
-    --v-checkbox-hint-color: var(--color-gray-true-500);
   }
 }
