--- a/packages/themes/src/morpheme/_forms.dark.scss
+++ b/packages/themes/src/morpheme/_forms.dark.scss
@@ -4,6 +4,9 @@
   .v-select,
   .v-select-button,
   .v-textarea,
+  .v-checkbox,
+  .v-checkbox-hint,
+  .v-radio,
   .autocomplete,
   .v-data-table-pagination-items-per-page {
     /* input control */
